--- a/login/login.html
+++ b/login/login.html
@@ -77,66 +77,41 @@
 
     <!-- Registration Form for users -->
     <div class="registration-popup" id="registration-popup">
-      <button class="close-btn" id="close-btn">&times;</button>
-      <form
-        method="post"
-        class="registration-form fade-in-bck"
-        id="registration-form"
-      >
-        <div class="signup-text text-secondary font-lg1">Sign Up</div>
-        <div class="input-group">
-          <label for="new-username">Username:</label>
-          <input
-            type="text"
-            id="new-username"
-            name="new-username"
-            placeholder="Enter your new username"
-            required
-          />
-        </div>
-        <div class="input-group">
-          <label for="new-password">Password:</label>
-          <input
-            type="password"
-            id="new-password"
-            name="new-password"
-            placeholder="Enter your new password"
-            required
-          />
-        </div>
+      <div class="popup fade-in-bck">
+        <span class="close-btn" id="close-btn">&times;</span>
+        <h2>Create New User</h2>
+        <form id="add-user-form" method="POST">
+          <div class="form-group">
+            <label for="new-username">Username:</label>
+            <input type="text" id="new-username" name="new-username" placeholder="Enter username" required />
+          </div>
 
-        <div class="input-group">
-          <label for="email">Email:</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Enter your email"
-            required
-          />
-        </div>
-        <div class="input-group">
-          <label for="name">Full Name:</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Enter your full name"
-            required
-          />
-        </div>
-        <div class="input-group">
-          <label for="role">Role:</label>
-          <select id="role" name="role" required>
-            <option value="customer">Customer</option>
-            <option value="admin">Admin</option>
-          </select>
-        </div>
+          <div class="form-group">
+            <label for="new-password">Password:</label>
+            <input type="password" id="new-password" placeholder="Enter password" name="new-password" required />
+          </div>
 
-        <button class="login-button btn-secondary" type="submit">
-          Sign Up
-        </button>
-      </form>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Enter email" required>
+          </div>
+          <div class="form-group">
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter full name" required>
+          </div>
+          <div class="form-group">
+            <label for="role">Role:</label>
+            <select id="role" name="role" required>
+              <option value="customer">Customer</option>
+              <option value="admin">Admin</option>
+            </select>
+          </div>
+          <div class="button-container">
+            <button type="submit">Sign Up</button>
+          </div>
+        </form>
+      </div>
+
     </div>
     <script src="../scripts/login/login-and-register.js" type="module"></script>
   </body>
